# CodeCognition

./: .gitignore  README.md  pyproject.toml
20230729_transformers/: README.md  dataset_load.py  datasets_quickstart.py  quick_tour.py
20230729_transformers/to_tokenizers/: to_tokenizers.py  tokens.json  wiki.train.raw
20230730_gradio/: chatbots.py  streaming.py  ui_components.py
20230730_gradio/flagged/: log.csv
20230801_ChatGLM2-6B/: chatbot.py  demo.py  test_torch.py
20230801_pandas/: 10minutes_dataframe.py  README.md  import_export.py  quickstart.py
20230802_modelscope/: README.md  demo.py  mengzi.py  modelscope_version.py  snapshot_download.py
20230802_pytorch/: torch_api.py
20230803_fire/: class_cmd.py  hello.py
20230803_numpy/: quickstart.py
20230803_streamlit/: home.py  layout.py  magic.py  widgets.py
20231114_apache_arrow/: main.py
20231218_langchain/: LCEL.py  output.py  prompts.py  quickstart.py
20231218_langchain/lcel/: LCEL.py  demo.py
20231218_langchain/text_splitter/: html_split.py  md_header_split.py  recursively_split_by_character.py  split_by_character.py  split_by_tokens.py  state_of_the_union_chinese.txt  state_of_the_union_chinese2.txt
2023730_gradio/: blocks.py  chatbots_text_classifier.py  quickstart.py
2023731_milvus/: hello_milv.py  qa.py
2023731_spaCy/: spacy_demo.py
