[tool.poetry]
name = "codecognition"
version = "0.1.0"
description = "code and note for AI"
authors = ["zhaoyii <532708564@qq.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
transformers = "^4.31.0"
torch = "^2.0.1"
python-dotenv = "^1.0.0"
emoji = "0.6.0"
gradio = "^3.39.0"
pymilvus = "^2.2.14"
towhee = "^1.1.1"
spacy = "^3.6.0"
tables = "^3.8.0"
openpyxl = "^3.1.2"
protobuf = "^4.23.4"
cpm-kernels = "^1.0.11"
mdtex2html = "^1.2.0"
sentencepiece = "^0.1.99"
accelerate = "^0.21.0"
torchvision = "^0.15.2"
modelscope = "^1.7.1"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
